# assessment

./: .gitignore  .mcp.json  CLAUDE.md  README.md  auth-360-flow.md  package-lock.json  package.json  skills-lock.json  vocational-360.md
backend/: .env.example  database.py  main.py  pyproject.toml  requirements.txt  seed.py  test_circle.py
backend/alembic/: env.py
backend/alembic/versions/: 6079f92cf1c0_add_users_and_link_to_subjects.py  7c0113735733_initial_schema.py  a1b2c3d4e5f6_replace_questioncategory_enum.py  b0e5b68fde1e_add_unique_constraints_answers.py  c2d3e4f5a6b7_fix_puntaje_check_constraints.py  d1e2f3a4b5c6_add_plan_to_subjects.py  e3f4a5b6c7d8_add_client_to_relationship_type.py  f1a2b3c4d5e6_merge_heads.py
backend/app/api/: admin.py  email_routes.py  pruebas_email.py  reports.py  subjects.py  survey.py
backend/app/models/: __init__.py  answer.py  evaluator.py  question.py  subject.py  user.py
backend/app/schemas/: __init__.py  answer.py  evaluator.py  report.py  subject.py  user.py
backend/app/services/: auth.py  circle_service.py  email_service.py  token_service.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AuthForm.jsx  Navbar.jsx  ProgressCircle.jsx  RadarChart.jsx  ReportPrint.jsx  StepForm.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminPanel.jsx  EvaluatorSurvey.jsx  GapReport.jsx  Home.jsx  SelfAssessment.jsx  SubjectDashboard.jsx
