[project]
name = "vocational-360-backend"
version = "0.1.0"
description = "360 MOST Assessment API — Open Source OD Framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "fastapi-mail==1.4.1",
    "python-dotenv==1.0.1",
    "pydantic[email]==2.7.1",
    "python-multipart==0.0.9",
]

[tool.uv]
package = false
